<?xml version="1.0"?>
<package format="3">
  <name>matplotlib_cpp</name>
  <version>0.0.0</version>
  <description>The ocs2_spot_mpc package</description>

  <maintainer email="farbod@todo.todo">farbod</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>python3</depend>
  <depend>python3-numpy</depend>
   <depend>python3-matplotlib</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

